pod1.yml
kind: Pod 
apiVersion: v1 
metadata: 
  name: nginx-pod 
spec: 
  containers: 
    - name: nginx-container 
      image: nginx 
      ports: 
        - containerPort: 80
