pod2.yml
kind: Pod 
apiVersion: v1 
metadata: 
  name: httpd-pod 
spec: 
  containers: 
    - name: httpd-container 
      image: httpd 
      ports: 
      - containerPort: 80
